[workspace]
members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.2.4", features = ["derive"] }
eyre = "0.6.12"
hf-hub = "0.4.1"
serde = "1.0.217"
serde_json = "1.0.138"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"

[package]
name = "pgpt"
version.workspace = true
edition.workspace = true

[package.metadata.maturin]
python-source = "python"
python-library = "python3.12"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgpt"
path = "./src/bin/pgrx_embed.rs"

[[bin]]
name = "test"
path = "./src/bin/test.rs"

[[bin]]
name = "daemon"
path = "./src/bin/daemon.rs"

[features]
default = ["pg17"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
crossbeam-channel = "0.5"
#candle-core = { version = "0.8.3", features = ["metal"] }
#candle-nn = { version = "0.8.3", features = ["metal"] }
#candle-transformers = { version = "0.8.3", features = ["metal"] }
pyo3-ffi = "0.24.0"
clap.workspace = true
eyre.workspace = true
hf-hub = "0.4.1"
pgrx = "=0.13.1"
once_cell = { version = "1.20", features = ["parking_lot"] }
serde.workspace = true
serde_json.workspace = true
tokenizers = "0.21.0"
tracing-chrome.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1", features = ["v4"] }
llama_cpp = { version = "0.3.2", features = ["metal"] }
llama_cpp_sys = { version = "0.3.2", features = ["metal"] }

[dependencies.pyo3]
version = "0.24.0"
features = ["auto-initialize", "abi3-py312"]

[dev-dependencies]
pgrx-tests = "=0.13.1"

[build-dependencies]
pyo3-build-config = "0.24.0"
